ext/win32ole/win32ole.c
@@ -26,7 +26,7 @@
 const IID IID_IMultiLanguage2 = {0xDCCFC164, 0x2B38, 0x11d2, {0xB7, 0xEC, 0x00, 0xC0, 0x4F, 0x8F, 0x5D, 0x9A}};
 #endif
 
-#define WIN32OLE_VERSION "1.8.6"
+#define WIN32OLE_VERSION "1.8.7"
 
 typedef HRESULT (STDAPICALLTYPE FNCOCREATEINSTANCEEX)
     (REFCLSID, IUnknown*, DWORD, COSERVERINFO*, DWORD, MULTI_QI*);
@@ -1809,7 +1809,9 @@ ole_const_load(ITypeLib *pTypeLib, VALUE klass, VALUE self)
                 *pName = toupper((int)*pName);
                 id = rb_intern(pName);
                 if (rb_is_const_id(id)) {
-                    rb_define_const(klass, pName, val);
+                    if(!rb_const_defined_at(klass, id)) {
+                        rb_define_const(klass, pName, val);
+                    }
                 }
                 else {
                     rb_hash_aset(constant, rb_str_new2(pName), val);
